<resources>
    <string name="app_name">ATM Launcher</string>

<!--    Atv Launchers STring values-->
    <string name="activity_pick_widget_no_preview_image">No preview image</string>
    <string name="activity_pick_widget_title">Select Widget</string>
    <string name="activity_sidebar_launcher_version">Version:</string>
    <string name="android_settings_menu">Android Settings</string>
    <string name="application_menu_configure">Configure</string>
    <string name="application_menu_create_folder">Create Folder</string>
    <string name="application_menu_move">Move</string>
    <string name="application_menu_move_to_folder">Move To Folder</string>
    <string name="application_menu_title">Application Menu</string>
    <string name="application_menu_uninstall">Uninstall</string>
    <string name="application_section_columns">Column Count</string>
    <string name="application_section_menu_show_section">Show Section</string>
    <string name="application_section_menu_show_title">Show Title</string>
    <string name="application_section_menu_title">Application Section</string>
    <string name="application_section_tile_border_radius">Border Radius</string>
    <string name="application_section_title">Applications</string>
    <string name="appwidget_error_message">Click on this tile to restore widget</string>
    <string name="appwidget_error_title">Could not load widget</string>
    <string name="appwidget_favorite_configure_display_icon">Display Icon</string>
    <string name="appwidget_favorite_configure_display_title">Display Name</string>
    <string name="appwidget_favorite_configure_select_app_title">Select Application</string>
    <string name="appwidget_favorite_configure_select_application">Select Application</string>
    <string name="appwidget_favorite_configure_select_application_detail">Selected:</string>
    <string name="appwidget_favorite_configure_select_application_detail_none">none</string>
    <string name="appwidget_favorite_configure_select_application_hint">Press [OK] to select application or [BACK] to cancel</string>
    <string name="appwidget_favorite_configure_title">Favorite Application</string>
    <string name="appwidget_favorite_non_selected_application_title">Select Application</string>
    <string name="background_menu_image">Image</string>
    <string name="background_menu_remove_background">Remove Background</string>
    <string name="background_menu_solid_color">Solid Color</string>
    <string name="background_menu_title">Background</string>
    <string name="button_apply">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_google_play">Get it on Google Play</string>
    <string name="button_grant">Grant Access</string>
    <string name="button_no">No</string>
    <string name="button_ok">Ok</string>
    <string name="button_yes">Yes</string>
    <string name="dialog_configure_application_display_mode">Display mode</string>
    <string name="dialog_configure_application_image_background">Image Background</string>
    <string name="dialog_configure_application_leanback">Leanback</string>
    <string name="dialog_configure_application_remove_background">Remove Background</string>
    <string name="dialog_configure_application_show_icon">Show Icon</string>
    <string name="dialog_configure_application_show_title">Show Title</string>
    <string name="dialog_configure_application_solid_color_background">Solid Color Background</string>
    <string name="dialog_configure_application_tablet">Tablet</string>
    <string name="dialog_configure_application_title">Configure Application</string>
    <string name="dialog_item_background_color_alpha">Alpha</string>
    <string name="dialog_item_background_color_hue">Hue</string>
    <string name="dialog_item_background_color_random_color">Random color</string>
    <string name="dialog_item_background_color_reset">Reset</string>
    <string name="dialog_item_background_color_saturation">Saturation</string>
    <string name="dialog_item_background_color_title">Background Color</string>
    <string name="dialog_item_background_color_value">Value</string>
    <string name="dialog_network_error_message">Cannot retrieve data from server. Please check your Internet connection and ATV Launcher settings.</string>
    <string name="dialog_network_error_title">Connection Error</string>
    <string name="dialog_no_appwidget_support_message">Your device does not support Application Widgets. Widgets section is disabled.</string>
    <string name="dialog_no_appwidget_support_title">Warning</string>
    <string name="dialog_scale_widget_title">Scale Widget Content</string>
    <string name="dialog_sidebar_application_border_radius">Border Radius</string>
    <string name="dialog_sidebar_application_columns">Column Count</string>
    <string name="dialog_sidebar_hint">Press [OK] or [BACK] to apply</string>
    <string name="dialog_sidebar_widget_columns">Column Count</string>
    <string name="dialog_sidebar_widget_rows">Row Count</string>
    <string name="dialog_sidebar_widget_size">Row Height</string>
    <string name="dialog_update_changelog">Сhangelog</string>
    <string name="dialog_update_downloaded">Downloaded: %progress%</string>
    <string name="dialog_update_later">Close</string>
    <string name="dialog_update_message">New version %version% is available</string>
    <string name="dialog_update_newest_version_using">You\'re using the newest version of ATV Launcher</string>
    <string name="dialog_update_skip">Skip Version</string>
    <string name="dialog_update_title">New version available</string>
    <string name="dialog_update_update">Update</string>
    <string name="dialog_widget_binding_failure_explanation_title">Widget Binding Failure</string>
    <string name="dialog_widget_tap_coordinates_title">Tap Coordinates</string>
    <string name="dialog_widget_tap_position_x">X Coordinate</string>
    <string name="dialog_widget_tap_position_y">Y Coordinate</string>
    <string name="file_picker_content_name">Name:</string>
    <string name="file_picker_content_path">Path:</string>
    <string name="file_picker_content_size">Size:</string>
    <string name="file_picker_content_type">Type:</string>
    <string name="file_picker_directory_content_parent">Parent folder</string>
    <string name="file_picker_footer_hint">Press [OK] to pick selected file</string>
    <string name="file_picker_hint">Hint:</string>
    <string name="file_picker_internal_sd_card">Internal Storage</string>
    <string name="file_picker_permission_denied_message">You need to grant SD card access in order to complete this operation.</string>
    <string name="file_picker_sd_card">External Storage</string>
    <string name="file_picker_sd_card_read_only">(Read only)</string>
    <string name="file_picker_storage_content_busy">Busy:</string>
    <string name="file_picker_storage_content_free">Free:</string>
    <string name="file_picker_storage_content_mount_point">Mount point:</string>
    <string name="file_picker_storage_content_total">Total:</string>
    <string name="file_picker_title">Select File</string>
    <string name="file_picker_type_apk">APK</string>
    <string name="file_picker_type_archive">Archive</string>
    <string name="file_picker_type_certificate">Certificate</string>
    <string name="file_picker_type_directory">Directory</string>
    <string name="file_picker_type_document">File</string>
    <string name="file_picker_type_drawing">Picture</string>
    <string name="file_picker_type_excel">Spreadsheet</string>
    <string name="file_picker_type_image">Image</string>
    <string name="file_picker_type_music">Music</string>
    <string name="file_picker_type_pdf">PDF document</string>
    <string name="file_picker_type_power_point">Presentation</string>
    <string name="file_picker_type_video">Video</string>
    <string name="file_picker_type_word">Document</string>
    <string name="image_picker_title">Select Image</string>
    <string name="input_section_title">Inputs</string>
    <string name="launcher_menu">Launcher Settings</string>
    <string name="launcher_menu_application_section">Applications</string>
    <string name="launcher_menu_hidden_applications">Hidden Apps</string>
    <string name="launcher_menu_input_section">Inputs</string>
    <string name="launcher_menu_title">Settings</string>
    <string name="launcher_menu_wallpaper">Wallpaper</string>
    <string name="launcher_menu_widget_section">Widgets</string>
    <string name="main_menu_title">Main</string>
    <string name="pro_label">PRO</string>
    <string name="status_bar_date_formatter">%1$s\10%2$s</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="toast_message">Toast message</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">H:mm</string>
    <string name="upgrade_to_pro_dialog_title">Upgrade to PRO</string>
    <string name="wallpaper_menu_application_wallpaper">Application Wallpaper</string>
    <string name="wallpaper_menu_application_wallpaper_details">For devices and systems without wallpaper support</string>
    <string name="wallpaper_menu_select_live_wallpaper">Select Live Wallpaper</string>
    <string name="wallpaper_menu_select_wallpaper">Select Wallpaper</string>
    <string name="wallpaper_menu_title">Wallpaper</string>
    <string name="widget_menu_configure_widget">Configure</string>
    <string name="widget_menu_move">Move</string>
    <string name="widget_menu_remove_widget">Remove</string>
    <string name="widget_menu_scale_widget">Scale Content</string>
    <string name="widget_menu_select_widget">Pick Widget</string>
    <string name="widget_menu_tap_coordinates">Tap Coordinates</string>
    <string name="widget_menu_title">Widget Menu</string>
    <string name="widget_menu_widget_background">Widget Background</string>
    <string name="widget_position_number">Widget #</string>
    <string name="widget_section_menu_columns">Column Count</string>
    <string name="widget_section_menu_rows">Row Count</string>
    <string name="widget_section_menu_show_section">Show Widgets</string>
    <string name="widget_section_menu_title">Widget Section</string>
    <string name="widget_section_menu_widget_size">Row Height</string>
    <string name="widget_section_title">Widgets</string>

</resources>