<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="@dimen/_350sdp" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:background="@drawable/background_dialog_header" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:id="@+id/editText" android:paddingLeft="@dimen/_10sdp" android:paddingTop="@dimen/_5sdp" android:paddingRight="@dimen/_10sdp" android:paddingBottom="@dimen/_5sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_configure_application_title" style="@style/Text"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/checkerboard" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
            <ImageView android:id="@+id/background" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="center"/>
            <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/right" android:background="#20000000" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout android:orientation="horizontal" android:padding="@dimen/_3sdp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:id="@+id/icon" android:layout_width="@dimen/_26sdp" android:layout_height="@dimen/_26sdp"/>
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingLeft="@dimen/_3sdp" android:paddingRight="@dimen/_3sdp" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:ellipsize="end" android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:lines="1" style="@style/TextSmall"/>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <ImageView android:id="@+id/mode_tablet_icon" android:layout_width="@dimen/_6sdp" android:layout_height="@dimen/_6sdp" android:src="@drawable/ic_tablet_small"/>
                        <TextView android:id="@+id/mode_tablet_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_1sdp" android:text="@string/dialog_configure_application_tablet" style=""/>
                        <View android:id="@+id/mode_separator" android:layout_width="5dp" android:layout_height="match_parent"/>
                        <ImageView android:id="@+id/mode_leanback_icon" android:layout_width="@dimen/_6sdp" android:layout_height="@dimen/_6sdp" android:src="@drawable/ic_tv_small"/>
                        <TextView android:id="@+id/mode_leanback_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_1sdp" android:text="@string/dialog_configure_application_leanback" style=""/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <View android:layout_width="match_parent" style="@style/SingleLine"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler_view" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/background_dialog_footer" android:padding="@dimen/_5sdp" android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:id="@+id/apply_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_apply" android:layout_weight="1"/>
        <View android:layout_width="2dp" android:layout_height="match_parent"/>
        <Button android:id="@+id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_cancel" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
